--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,55 +17,29 @@
         android:paddingBottom="5dp"
         app:layout_constraintTop_toTopOf="parent">
 
+
+        <TextView
+            android:id="@+id/user_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/profile_icon"
+            android:layout_marginEnd="5dp"
+            android:text="Xin chao"
+            android:textColor="#F29E18"
+            android:textSize="14sp"
+            android:textStyle="bold" />
         <ImageView
             android:id="@+id/profile_icon"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:src="@drawable/ic_home_avatar"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/black" />
-
-        <LinearLayout
-            android:id="@+id/stars_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/spinner_border_round_2"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingHorizontal="4dp"
-            android:paddingVertical="4dp"
-            android:layout_marginEnd="15dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/notification_icon"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="10"
-                android:textColor="#F29E18"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-            <ImageView
-                android:layout_width="14dp"
-                android:layout_height="14dp"
-                android:layout_marginStart="4dp"
-                android:src="@drawable/ic_star"
-                app:tint="#F2D326" />
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/notification_icon"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:src="@drawable/ic_outline_notifications"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:tint="@color/black" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!-- Main content -->
@@ -321,13 +295,13 @@
                             android:textSize="10sp" />
                     </LinearLayout>
 
-                    <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_gravity="center_vertical"
-                        android:src="@drawable/ic_arrow_back_left"
-                        android:rotation="180"
-                        app:tint="@color/black" />
+<!--                    <ImageView-->
+<!--                        android:layout_width="24dp"-->
+<!--                        android:layout_height="24dp"-->
+<!--                        android:layout_gravity="center_vertical"-->
+<!--                        android:src="@drawable/ic_arrow_back_left"-->
+<!--                        android:rotation="180"-->
+<!--                        app:tint="@color/black" />-->
                 </LinearLayout>
 
                 <!-- Divider -->
