--- a/app/src/main/res/layout/activity_qrscanner.xml
+++ b/app/src/main/res/layout/activity_qrscanner.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black"
-    tools:context=".presentation.feature.noteScene.QRScannerActivity">
+    tools:context=".presentation.feature.qrscanner.QRScannerActivity">
 
     <com.journeyapps.barcodescanner.DecoratedBarcodeView
         android:id="@+id/barcode_scanner"
