--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,19 +17,6 @@
         android:paddingBottom="5dp"
         app:layout_constraintTop_toTopOf="parent">
 
-
-        <TextView
-            android:id="@+id/user_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/profile_icon"
-            android:layout_marginEnd="5dp"
-            android:text="Xin chao"
-            android:textColor="#F29E18"
-            android:textSize="14sp"
-            android:textStyle="bold" />
         <ImageView
             android:id="@+id/profile_icon"
             android:layout_width="25dp"
@@ -37,8 +24,7 @@
             android:src="@drawable/ic_home_avatar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/black" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -130,7 +116,7 @@
 
                     <!-- First Utility: Dictionary -->
                     <LinearLayout
-                        android:id="@+id/dictionary_item"
+                        android:id="@+id/dictionaryButton"
                         android:layout_width="70dp"
                         android:layout_height="70dp"
                         android:background="@drawable/back_utilities"
@@ -433,7 +419,7 @@
                     android:id="@+id/open_missions_button"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="8dp"
                     app:cornerRadius="10dp"
                     android:backgroundTint="#F3B24B"
                     android:text="@string/see_more_searches"
