--- a/app/src/main/res/drawable/typing_indicator.xml
+++ b/app/src/main/res/drawable/typing_indicator.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- app/src/main/res/drawable/typing_indicator.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#FF00FF00" />
+
+    <!-- Nền màu xanh lá cho typing indicator -->
+    <solid android:color="@color/green" />
+
+    <!-- Viền trắng -->
+    <stroke
+        android:width="1dp"
+        android:color="@color/white" />
+
 </shape>
